master/weegle-common/src/main/resources/kubernetes/Service_jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.name}-svc
spec:
  ports:
    - port: 8080
      targetPort: ${server.port}
  selector:
    app: ${project.name}
  type: NodePort
