master/weegle-common/src/main/resources/kubernetes/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ${project.name}-ingress
  namespace: default
spec:
  rules:
  - host: a363ec8be179811e99d570ec2d840dae-1442812623.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: ${project.name}-svc
          servicePort: ${server.port}
        path: /${project.name}
